<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/search_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/search_title"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/search_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/search_search_text"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/search_listview"
        android:layout_width="match_parent"
        android:layout_height="504dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/search_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/glyndwrbottom_img2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:contentDescription="@string/bottom_bar_content_desc"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/glyndwrbottom" />

</LinearLayout>